# streamlit-fifa-py-estudo

./: CHANGELOG.md  pyproject.toml  pytest.ini
src/streamlit_fifa_py_estudo/: __init__.py  main.py
src/streamlit_fifa_py_estudo/app/: inicializacao.py
src/streamlit_fifa_py_estudo/app/features/: features_presenter.py
src/streamlit_fifa_py_estudo/app/features/ler_csv_fifa/datasource/: load_csv_pandas_datasource.py
src/streamlit_fifa_py_estudo/app/features/ler_csv_fifa/domain/models/: fifa_player.py
src/streamlit_fifa_py_estudo/app/features/ler_csv_fifa/domain/usecase/: ler_csv_fifa_usecase.py
src/streamlit_fifa_py_estudo/app/features/salvar_bytes_csv_fifa/datasource/: salvar_bytes_csv_fifa_datasource.py
src/streamlit_fifa_py_estudo/app/features/salvar_bytes_csv_fifa/domain/usecase/: salvar_bytes_csv_fifa_usecase.py
src/streamlit_fifa_py_estudo/app/ui/pages/: home.py  players.py  teams.py
src/streamlit_fifa_py_estudo/app/utils/: consts.py  erros.py  parameters.py  types.py
tests/streamlit_fifa_py_estudo/app/: __init__.py
tests/streamlit_fifa_py_estudo/app/features/: features_presenter_test.py  mock_presenter.csv
tests/streamlit_fifa_py_estudo/app/features/ler_csv_fifa/datasource/: load_csv_pandas_datasource_test.py
tests/streamlit_fifa_py_estudo/app/features/ler_csv_fifa/domain/usecase/: ler_csv_fifa_usecase_test.py
tests/streamlit_fifa_py_estudo/app/features/salvar_bytes_csv_fifa/datasource/: salvar_bytes_csv_fifa_datasource_test.py
(+1 files in other folders)
